maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: expected class or object definition
while(!okgauche()){
^Escaper:28: error: expected class or object definition
def keepHandOnSideWall(){
^Escaper:47: error: expected class or object definition
def Nord(){
^Escaper:67: error: expected class or object definition
def okgauche(){
^Escaper:73: error: Unmatched closing brace '}' ignored here
}
^